--- a/demo.html
+++ b/demo.html
@@ -1,19 +1,3 @@
-<?php
-    $dsn = 'mysql:dbname=sample_db;host=127.0.0.1;';
-    $user = 'rikako';
-    $password = 'Morijyobi22';
-    try {
-        $dbh = new PDO($dsn, $user, $password);
-
-        $sql = "select * from user";
-        $result = $dbh->query($sql);
-
-    } catch (PDOException $e) {
-        echo "接続失敗: " . $e->getMessage() . "\n";
-        exit();
-    }
-?>
-
 <!DOCTYPE html>
 <html lang="ja">
 <head>
@@ -72,13 +56,21 @@
                         </tr>
                     </thead>
                     <tbody>
-                        <?php foreach($result as $value) {?>
-                            <tr>
-                                <th><?php echo "$value[id]" ?></th>
-                                <td><?php echo "$value[name]" ?></td>
-                                <td><?php echo "$value[age]" ?></td>
-                            </tr>
-                        <?php } ?>
+                        <tr>
+                            <th>1</th>
+                            <td>User</td>
+                            <td>20</td>
+                        </tr>
+                        <tr>
+                            <th>2</th>
+                            <td>User</td>
+                            <td>30</td>
+                        </tr>
+                        <tr>
+                            <th>3</th>
+                            <td>User</td>
+                            <td>40</td>
+                        </tr>
                     </tbody>
                 </table>
             </div>
