--- a/demo.html
+++ b/demo.html
@@ -76,7 +76,22 @@
             </div>
 
             <div id="tab2" class="tab-pane">
-                sample2
+                <form action="">
+                    <div class="form-group">
+                        <label for="id">id</label>
+                        <input class="form-control" type="text" name="id" id="id">
+                    </div>
+                    <div class="form-group">
+                        <label for="name">name</label>
+                        <input class="form-control" type="text" name="name" id="name">
+                    </div>
+                    <div class="form-group">
+                        <label for="age">age</label>
+                        <input class="form-control" type="text" name="age" id="age">
+                    </div>
+
+                    <button type="submit" class="btn btn-primary">Insert</button>
+            </form>
             </div>
 
             <div id="tab3" class="tab-pane">
