--- a/demo.html
+++ b/demo.html
@@ -76,7 +76,7 @@
             </div>
 
             <div id="tab2" class="tab-pane">
-                <form action="">
+                <form class="mt-5" action="./insert.php" method="POST">
                     <div class="form-group">
                         <label for="id">id</label>
                         <input class="form-control" type="text" name="id" id="id">
@@ -92,6 +92,33 @@
 
                     <button type="submit" class="btn btn-primary">Insert</button>
             </form>
+
+            <?php
+                $dsn = 'mysql:dbname=sample_db;host=127.0.0.1;';
+                $user = 'rikako';
+                $password = 'Morijyobi22';
+                try {
+                    $dbh = new PDO($dsn, $user, $password);
+                    $dbh->setAttribute(PDO::ATTR_ERRMODE, PDO::ERRMODE_EXCEPTION);
+
+                    $id = $_POST['id'];
+                    $name = $_POST['name'];
+                    $age = $_POST['age'];
+
+                    $sql = "insert into user values (:id,:name,:age)";
+                    $stmt = $dbh->prepare($sql);
+                    $params = array(':id' => $id, ':name' => $name, ':age' => $age);
+
+                    $result = $dbh->query($sql);
+
+                    header('Location: index.php?fg=1');
+
+                } catch (PDOException $e) {
+                // echo "接続失敗: " . $e->getMessage() . "\n";
+                header('Location: index.php?fg=1?err=$e->getMessage()');
+                exit();
+                }
+            ?>
             </div>
 
             <div id="tab3" class="tab-pane">
